l10n added to app 'news'

--- a/l10n/.tx/config
+++ b/l10n/.tx/config
@@ -87,3 +87,9 @@ source_file = templates/external.pot
 source_lang = en
 type = PO
 
+[owncloud.news]
+file_filter = <lang>/news.po
+source_file = templates/news.pot
+source_lang = en
+type = PO
+
