l10n added to app 'updater'

--- a/l10n/.tx/config
+++ b/l10n/.tx/config
@@ -93,3 +93,9 @@ source_file = templates/news.pot
 source_lang = en
 type = PO
 
+[owncloud.updater]
+file_filter = <lang>/updater.po
+source_file = templates/updater.pot
+source_lang = en
+type = PO
+
