--- a/l10n/.tx/config
+++ b/l10n/.tx/config
@@ -105,3 +105,11 @@ source_file = templates/ownpad_lite.pot
 source_lang = en
 type = PO
 
+[owncloud.mozilla_sync]
+file_filter = <lang>/mozilla_sync.po
+source_file = templates/mozilla_sync.pot
+source_lang = en
+type = PO
+
+
+
